Updated server.js, configuring client side

--- a/13-chat-app/frontend/index.html
+++ b/13-chat-app/frontend/index.html
@@ -2,9 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/logo-app.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Messaro: Connect and chat instantly with friends and family.
+     Enjoy easy messaging and simple conversations. Stay connected, effortlessly.">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Messaro, chat, messaging, communication">
+    <meta property="og:title" content="Messaro: Your Simple Chat App">
+    <meta property="og:description" content="A description for social media shares.">
+    <meta property="og:image" content="URL_to_an_image_for_social_share.jpg">
+    <meta property="og:url" content="https://www.messaro.com">
+    <meta property="og:type" content="website"> 
+    <meta property="og:site_name" content="Messaro">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Messaro – Real-Time Chat App">
+    <meta name="twitter:description" content="Chat smarter with Messaro. Connect instantly, securely, and stylishly.">
+    <meta name="twitter:image" content="https://www.messaro.com/assets/twitter-preview.png">
+    <meta name="twitter:url" content="https://www.messaro.com">
+    <meta name="twitter:site" content="@MessaroApp"> 
+    <title>Messaro</title>
+    <link rel="canonical" href="...">
+    <link rel="alternate" hreflang="x" href="...">
+    <link rel="alternate" hreflang="en-US" href="https://www.messaro.com/us/page">
+    <link rel="alternate" hreflang="fr-FR" href="https://www.messaro.com/fr/page">
+    <link rel="alternate" hreflang="pl-PL" href="https://www.messaro.com/pl/page">
+    <link rel="alternate" hreflang="uk-UA" href="https://www.messaro.com/ua/page">
+    <meta name="author" content="Messaro Team">
+    <meta name="copyright" content="Messaro 2023">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="application-name" content="Messaro">
+    <!-- Binded to another domain different from messaro.com , repalce verf code later -->
+    <meta name="google-site-verification" content="add_verification_code_here">
+    <meta name="google" content="notranslate">
+    <meta name="rating" content="general">
   </head>
   <body>
     <div id="root"></div>
